# hrain

./: .gitignore  hrain.cabal  stack.yaml
app/: Main.hs  Presets.hs  Sim.hs
